gatekeeper/cluster/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: namespace-owner-label-present
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: >-
      All namespaces must have a `uw.systems/owner` label that corresponds to
      the name of the team. A list of valid team names can be found here:
      https://github.com/utilitywarehouse/documentation/tree/master/infra#structure
    labels:
      - key: "uw.systems/owner"
        allowedRegex: "^(bill|billing|btg-operations|btg-security|cbc|contact-channels|crm|customer|customer-platform|data|digital-support|energy|insurance|partner|payment|system|telecom|unicom)$"
---
# Mitigates CVE-2020-8554 by preventing the use of any externalIPs on services
#  - https://www.stackrox.com/post/2020/12/cve-2020-8554-man-in-the-middle-vulnerability-in-kubernetes-top-recommendations/
#  - https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-8554
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalIPs
metadata:
  name: "allowed-external-ips"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
  parameters:
    allowedIPs: []
