gatekeeper/cluster/gatekeeper-patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gatekeeper-validating-webhook-configuration
  annotations:
    cert-manager.io/inject-ca-from: sys-gatekeeper/gatekeeper-serving-cert
webhooks:
  - name: validation.gatekeeper.sh
    clientConfig:
      service:
        namespace: sys-gatekeeper
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - "ingresses"
          - "ingressroutetcps"
          - "ingressroutes"
          - "namespaces"
          - "pods"
          - "serviceaccounts"
          - "services"
  - name: check-ignore-label.gatekeeper.sh
    clientConfig:
      service:
        namespace: sys-gatekeeper
